stages/stage3/k8s/config/00-namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: apollo-airlines-apps
  labels:
    app.kubernetes.io/part-of: apollo-airlines
    app.kubernetes.io/component: apps
---
apiVersion: v1
kind: Namespace
metadata:
  name: apollo-airlines-ui
  labels:
    app.kubernetes.io/part-of: apollo-airlines
    app.kubernetes.io/component: ui
