stages/stage3/k8s/config/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: apollo-airlines-infra
  labels:
    app.kubernetes.io/name: apollo-airlines
    app.kubernetes.io/component: infra
---
apiVersion: v1
kind: Namespace
metadata:
  name: apollo-airlines-apps
  labels:
    app.kubernetes.io/name: apollo-airlines
    app.kubernetes.io/component: apps
---
apiVersion: v1
kind: Namespace
metadata:
  name: apollo-airlines-ui
  labels:
    app.kubernetes.io/name: apollo-airlines
    app.kubernetes.io/component: ui
