stages/stage3/k8s/config/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apollo-airlines-gateway
  namespace: apollo-airlines-ui
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: frontend.apolloairlines.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 3000
